set(SOURCES
    ActiveSettings.cpp
    Cell.cpp
    ConnectionDetails.cpp
    CodePage.cpp
    ColourTheme.cpp
    Display/ClickableSvgItem.cpp
    Display/DisplayScreen.cpp
    Display/DisplayScreen_Cursor.cpp
    Display/StatusBar.cpp
    Display/DisplayScreen_Mouse.cpp
    FunctionRegistry.cpp
    Models/Colours.cpp
    Models/KeyboardMap.cpp
    Preferences/ColourSwatchWidget.cpp
    Preferences/KeyboardMapWidget.cpp
    Sessions/ManageAutoStartDialog.cpp
    Sessions/ManageSessionsDialog.cpp
    Sessions/OpenSessionDialog.cpp
    HostAddressUtils.cpp
    Keyboard.cpp
    KeyboardThemeDialog.cpp
    MainWindow.cpp
    Preferences/PreferencesDialog.cpp
    ProcessDataStream.cpp
    Sessions/SaveSessionDialog.cpp
    Models/Session.cpp
    Sessions/SessionDialogBase.cpp
    Sessions/SessionPreviewWidget.cpp
    Stores/ColourStore.cpp
    Stores/KeyboardStore.cpp
    Stores/SessionStore.cpp
    Terminal.cpp
    main.cpp
    SocketConnection.cpp
    Preferences/KeyboardSequenceEdit.cpp
    Preferences/FontWidget.cpp
)

set(HEADERS
    ActiveSettings.h
    Cell.h
    ConnectionDetails.h
    CodePage.h
    ColourTheme.h
    DisplayScreen.h
    Display/ClickableSvgItem.h
    Display/StatusBar.h
    FunctionRegistry.h
    Models/Colours.h
    Preferences/ColourSwatchWidget.h
    Preferences/KeyboardMapWidget.h
    Sessions/ManageAutoStartDialog.h
    Sessions/ManageSessionsDialog.h
    Sessions/OpenSessionDialog.h
    HostAddressUtils.h
    Keyboard.h
    KeyboardThemeDialog.h
    MainWindow.h
    Preferences/PreferencesDialog.h
    ProcessDataStream.h
    Q3270.h
    Sessions/SaveSessionDialog.h
    Models/Session.h
    Models/KeyboardMap.h
    Sessions/SessionDialogBase.h
    Sessions/SessionPreviewWidget.h
    Stores/ColourStore.h
    Stores/KeyboardStore.h
    Stores/SessionStore.h
    SocketConnection.h
    Terminal.h
    Preferences/KeyboardSequenceEdit.h
    Preferences/FontWidget.h
    ${CMAKE_BINARY_DIR}/Version.h
)

set(FORMS
    About.ui
    ConnectionDetails.ui
    ColourTheme.ui
    KeyboardTheme.ui
    MainWindowDialog.ui
    Preferences/ColourSwatchWidget.ui
    Preferences/KeyboardMapWidget.ui
    Sessions/ManageAutoStartDialog.ui
    Sessions/ManageSessions.ui
    Preferences/PreferencesDialog.ui
    Sessions/SessionDialog.ui
    Sessions/SessionPreview.ui
    Preferences/FontWidget.ui
)

set(RESOURCES
    ${CMAKE_SOURCE_DIR}/resources/Q3270.qrc
)

if(APPLE)
    set(Q3270_BUNDLE_TYPE MACOSX_BUNDLE)
endif()

qt_add_executable(Q3270 ${Q3270_BUNDLE_TYPE}
    ${SOURCES}
    ${HEADERS}
    ${FORMS}
    ${RESOURCES}
)
target_link_libraries(Q3270 PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Network Qt6::Svg Qt6::SvgWidgets)

target_include_directories(Q3270 PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_BINARY_DIR}
)
